include_HEADERS = \
	libgzipf.h

pkginclude_HEADERS = \
	libgzipf/codepage.h \
	libgzipf/definitions.h \
	libgzipf/error.h \
	libgzipf/extern.h \
	libgzipf/features.h \
	libgzipf/types.h

EXTRA_DIST = \
	libgzipf.h.in \
	libgzipf/definitions.h.in \
	libgzipf/features.h.in \
	libgzipf/types.h.in

DISTCLEANFILES = \
	libgzipf.h \
	libgzipf/definitions.h \
	libgzipf/features.h \
	libgzipf/types.h \
	Makefile \
	Makefile.in

