MSVSCPP_FILES = \
	gzipf_test_bit_stream/gzipf_test_bit_stream.vcproj \
	gzipf_test_checksum/gzipf_test_checksum.vcproj \
	gzipf_test_compressed_segment/gzipf_test_compressed_segment.vcproj \
	gzipf_test_deflate/gzipf_test_deflate.vcproj \
	gzipf_test_error/gzipf_test_error.vcproj \
	gzipf_test_file/gzipf_test_file.vcproj \
	gzipf_test_huffman_tree/gzipf_test_huffman_tree.vcproj \
	gzipf_test_io_handle/gzipf_test_io_handle.vcproj \
	gzipf_test_member/gzipf_test_member.vcproj \
	gzipf_test_member_descriptor/gzipf_test_member_descriptor.vcproj \
	gzipf_test_member_footer/gzipf_test_member_footer.vcproj \
	gzipf_test_member_header/gzipf_test_member_header.vcproj \
	gzipf_test_notify/gzipf_test_notify.vcproj \
	gzipf_test_support/gzipf_test_support.vcproj \
	gzipf_test_tools_info_handle/gzipf_test_tools_info_handle.vcproj \
	gzipf_test_tools_output/gzipf_test_tools_output.vcproj \
	gzipf_test_tools_signal/gzipf_test_tools_signal.vcproj \
	gzipfinfo/gzipfinfo.vcproj \
	gzipfmount/gzipfmount.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libgzipf/libgzipf.vcproj \
	libuna/libuna.vcproj \
	pygzipf/pygzipf.vcproj \
	zlib/zlib.vcproj \
	libgzipf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

